<resources>
    <string name="app_name">WifiScanner</string>
    <string name="action_settings">Settings</string>
    <string name="button_scan">Scan Networks</string>
    <string name="switch_wifi_state">Wifi State</string>
    <string name="label_wifi_state">Wifi State</string>
    <string name="label_wifi_bssid">BSSID:</string>
    <string name="label_wifi_capabilities">Capabilities:</string>
    <string name="label_wifi_freq">Frequency:</string>
    <string name="label_wifi_rssi">Signal Strength:</string>
    <string name="label_wifi_ch_width">Channel Width:</string>
    <string name="label_wifi_ip">IP Address:</string>
    <string name="label_wifi_mac_addr">MAC Address:</string>
    <string name="label_wifi_connection_title">Connection info</string>

    <string name="label_wifi_type_psk">PSK</string>
    <string name="label_wifi_type_wep">WEP</string>
    <string name="label_wifi_type_eap">EAP</string>
    <string name="label_wifi_type_open">Open Network</string>

    <string name="label_wifi_connectingto">Connecting to</string>

    <string name="label_title_disconnecting">Disconnecting...</string>
    <string name="label_title_connecting">Connecting...</string>
    <string name="label_title_scanning">Scanning networks...</string>
    <string name="label_title_enabling_wifi">Enabling WiFi...</string>
    <string name="label_title_disabling_wifi">Disabling WiFi...</string>

    <string name="label_message_areyousure">Are you sure?</string>
    <string name="label_message_plsenablewifi">Please enable WiFi before scanning</string>



    <string name="hint_identity">Identity</string>
    <string name="hint_passkey">Password</string>

    <string name="misc_unknown">Unknown</string>
    <string name="misc_connect">Connect</string>
    <string name="misc_disconnect">Disconnect</string>
    <string name="misc_cancel">Cancel</string>
    <string name="msic_password">Password</string>

    <string name="error_wrong_pass">Error - Wrong Credentials</string>

    <string name="label_wifi_current_conn">Current Connection</string>
    <string name="label_wifi_available_conn">Available Networks</string>
    <string name="label_wifi_security">Wifi Security Type:</string>
</resources>
