<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:text="@string/label_wifi_connection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="6"
        android:columnCount="2"
        android:paddingLeft="10dp">

    <TextView
        android:text="@string/label_wifi_mac_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_wifi_mac_addr"
        android:paddingRight="10dp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_wifi_mac_addr"
        android:paddingRight="10dp"/>

    <TextView
        android:text="@string/label_wifi_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_wifi_ip"
        android:paddingRight="10dp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_wifi_ip"
        android:paddingRight="10dp"/>



    </GridLayout>

</LinearLayout>